# cpp-commander

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build-and-run.sh
Commander/: Argument.cpp  Argument.hpp  ArgumentRegistry.cpp  ArgumentRegistry.hpp  CMakeLists.txt  CommandDescriptor.cpp  CommandRegistry.cpp  CommandRegistry.hpp
examples/: CMakeLists.txt  Makefile  main.cpp
examples/commands/: MyCommand.cpp  MyCommand.hpp
examples/dynamic_commands/: CMakeLists.txt  DynamicCommand.cpp  DynamicCommand.hpp
src/: Argument.cpp  Argument.hpp  ArgumentRegistry.cpp  ArgumentRegistry.hpp  CMakeLists.txt  Command.hpp  CommandDescriptor.cpp  CommandDescriptor.hpp  CommandRegistry.cpp  CommandRegistry.hpp
tests/: ArgumentRegistry_test.cpp  Argument_test.cpp  CMakeLists.txt  CommandRegistry_test.cpp  main_test.cpp
