set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)

include_directories(${Boost_INCLUDE_DIRS})

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} COMMANDER_TESTS_SOURCES)
add_executable(${PROJECT_TEST_NAME} ${COMMANDER_TESTS_SOURCES})
target_link_libraries(${PROJECT_TEST_NAME} commander ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
set_target_properties(${PROJECT_TEST_NAME} PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)
add_test(NAME ${PROJECT_TEST_NAME}
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests
  COMMAND ${CMAKE_BINARY_DIR}/bin/tests/${PROJECT_TEST_NAME})
